- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 4.9.0-beta1
- 
    None
- 
    Debian sid
int main() { return 0; // BREAK HERE }
Trying to debug with LLDB doesn't stop at the breakpoint.
Log attached.
stderr output:
LLDB STDERR UNEXPECTED: "bind: Invalid command `enable-meta-key'.\n" LLDB STDERR UNEXPECTED: "error: 'add-auto-load-safe-path' is not a valid command.\n" *** UNEXPECTED STATE TRANSITION: Debugger::Internal::LldbEngine(0x556d251e3910, name = "LldbEngine") "State changed from InferiorStopRequested(10) to InferiorShutdownRequested(13)" LLDB STDERR UNEXPECTED: "bind: Invalid command `enable-meta-key'.\n" LLDB STDERR UNEXPECTED: "error: 'add-auto-load-safe-path' is not a valid command.\n" *** UNEXPECTED STATE TRANSITION: Debugger::Internal::LldbEngine(0x556d268d0470, name = "LldbEngine") "State changed from InferiorStopRequested(10) to InferiorShutdownRequested(13)"
| For Gerrit Dashboard: QTCREATORBUG-21615 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 250506,2 | Debugger: Execute LLDB path substitution at similar times as GDB | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 250715,3 | Debugger: Reduce the amount of ignored stop messages with LLDB | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |