Debugger: Execute LLDB path substitution at similar times as GDB

There have been some event sequencing changes between LLDB 6.x and 7.x,
leading to QTCREATORBUG-21615. This change here is moving to a similar
sequencing on the Creator side as a first step.

Change-Id: I13a0901f96ae523b57ad03d8d251890f9c71d46c
Task-number: QTCREATORBUG-21615
Task-number: QTCREATORBUG-17468
Reviewed-by: Christian Stenger <christian.stenger@qt.io>